# SREP-Steamphonk

./: .gitignore  .gitmodules  CMakeLists.txt
project/: CMakeLists.txt  Doxyfile  HelloSRE.cpp  TimerComponent.cpp
project/Metroidvania/: CMakeLists.txt  main.cpp
project/Metroidvania/levels/: testlvl.json
project/Steamphonk/: Box2DDebugDraw.cpp  Bullet.cpp  Bullet.hpp  CMakeLists.txt  CharacterController.cpp  CharacterController.hpp  CharacterControllerPDA.hpp  Collectible.cpp  Collectible.hpp  Component.cpp  Component.hpp  Crosshair.cpp  Crosshair.hpp  Damageable.cpp  Damageable.hpp  EnemyComponent.cpp  EnemyComponent.hpp  Explosion.cpp  Explosion.hpp  FollowPathComponent.cpp  FollowPathComponent.hpp  GameObject.hpp  Gun.cpp  Gun.hpp  Level.cpp  Level.hpp  ObjectPool.hpp  PhysicsComponent.cpp  PhysicsComponent.hpp  PlatformComponent.cpp  PlatformerGame.cpp  PlatformerGame.hpp  Projectile.cpp  Projectile.hpp  RocketBullet.cpp  SideScrollingCamera.cpp  SpriteComponent.cpp  SpriteComponent.hpp  TimerComponent.hpp  main.cpp
project/doc/html/: Box2DDebugDraw_8hpp_source.html  Bullet_8hpp_source.html  CharacterControllerPDA_8hpp_source.html  CharacterController_8hpp_source.html  Collectible_8hpp_source.html  Component_8hpp_source.html  Crosshair_8hpp_source.html  Damageable_8hpp_source.html  EnemyComponent_8hpp_source.html  Explosion_8hpp_source.html  FollowPathComponent_8hpp_source.html  GameObject_8hpp_source.html  Gun_8hpp_source.html  Level_8hpp_source.html  ObjectPool_8hpp_source.html  PhysicsComponent_8hpp_source.html  PlatformComponent_8hpp_source.html  PlatformerGame_8hpp_source.html  Projectile_8hpp_source.html  SideScrollingCamera_8hpp_source.html  SpriteComponent_8hpp_source.html  TimerComponent_8hpp_source.html  annotated.html  classBox2DDebugDraw.html  classBox2DDebugDraw__coll__graph.map  classBox2DDebugDraw__inherit__graph.md5  classBullet-members.html  classBullet.html  classBullet__coll__graph.map  classBullet__coll__graph.md5  classBullet__inherit__graph.map  classBullet__inherit__graph.md5  classCharacterController-members.html  classCharacterController.html  classCharacterController__coll__graph.map  classCharacterController__coll__graph.md5  classCharacterController__inherit__graph.map  classCharacterController__inherit__graph.md5  classCharacterState.html  classCharacterState__inherit__graph.map  (+140 more)
project/doc/html/search/: all_0.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_b.js  classes_1.js  classes_5.js  classes_a.js  classes_c.js  functions_0.js  searchdata.js
project/doc/latex/: Box2DDebugDraw_8hpp_source.tex  Bullet_8hpp_source.tex  CharacterControllerPDA_8hpp_source.tex  CharacterController_8hpp_source.tex  Collectible_8hpp_source.tex  Component_8hpp_source.tex  Crosshair_8hpp_source.tex  Damageable_8hpp_source.tex  EnemyComponent_8hpp_source.tex  Explosion_8hpp_source.tex  FollowPathComponent_8hpp_source.tex  GameObject_8hpp_source.tex  Gun_8hpp_source.tex  Level_8hpp_source.tex  ObjectPool_8hpp_source.tex  PhysicsComponent_8hpp_source.tex  PlatformComponent_8hpp_source.tex  PlatformerGame_8hpp_source.tex  Projectile_8hpp_source.tex  SideScrollingCamera_8hpp_source.tex  SpriteComponent_8hpp_source.tex  TimerComponent_8hpp_source.tex  annotated.tex  classBox2DDebugDraw.tex  classBullet.tex  classBullet__coll__graph.dot  classBullet__inherit__graph.dot  classCharacterController.tex  classCharacterController__coll__graph.dot  classCharacterController__inherit__graph.dot  classCharacterState.tex  classCharacterState__coll__graph.dot  classCharacterState__inherit__graph.dot  classCollectible.tex  classCollectible__coll__graph.dot  classCollectible__inherit__graph.dot  classComponent.tex  classComponent__inherit__graph.dot  classCrosshair.tex  classCrosshair__coll__graph.dot  (+57 more)
project/platformer/: BirdMovementComponent.cpp  BirdMovementComponent.hpp  Box2DDebugDraw.cpp  Box2DDebugDraw.hpp  Bullet.cpp  Bullet.hpp  BulletFactory.cpp  BulletFactory.hpp  CMakeLists.txt  CharacterController.cpp  CharacterController.hpp  CharacterControllerPDA.cpp  CharacterControllerPDA.hpp  Collectible.cpp  Collectible.hpp  Crosshair.cpp  Crosshair.hpp  Damagable.cpp  Damagable.hpp  Doxyfile  EnemyComponent.cpp  EnemyComponent.hpp  Explosion.cpp  Explosion.hpp  FollowPathComponent.cpp  FollowPathComponent.hpp  GameObject.hpp  Gun.cpp  Gun.hpp  HandgunGun.hpp  Laser.cpp  Laser.hpp  Level.cpp  Level.hpp  Missile.cpp  Missile.hpp  MovingPlatformComponent.cpp  ObjectPool.cpp  ObjectPool.hpp  PhysicsComponent.cpp  (+26 more)
project/platformer/Bullets/: Bullet.hpp  RevolverBullet.hpp  RocketBullet.hpp  ShotgunBullet.hpp
project/platformer/CharacterStates/: CharacterControllerPDA.cpp  CharacterControllerPDA.hpp  StandingState.cpp  StandingState.hpp
project/platformer/Character_Anims/: characterAnims.json
project/platformer/Guns/: Gun.cpp  Gun.hpp  Revolver.cpp  Revolver.hpp  RocketLauncher.hpp  Shotgun.hpp
project/platformer/UI/: UISprites.json
project/platformer/doc/html/: Box2DDebugDraw_8hpp_source.html  BulletFactory_8hpp_source.html  Bullet_8hpp_source.html  CharacterControllerPDA_8hpp_source.html  CharacterController_8hpp_source.html  Component_8hpp_source.html  Crosshair_8hpp_source.html  Damagable_8hpp_source.html  EnemyComponent_8hpp_source.html  Explosion_8hpp_source.html  FollowPathComponent_8hpp_source.html  GameObject_8hpp_source.html  Gun_8hpp_source.html  Level_8hpp_source.html  Missile_8hpp_source.html  MovingPlatformComponent_8hpp_source.html  PhysicsComponent_8hpp_source.html  PlatformComponent_8hpp_source.html  PlatformerGame_8hpp_source.html  PlayerShooting_8hpp_source.html  RocketBullet_8hpp_source.html  RocketLauncher_8hpp_source.html  ShotgunBullet_8hpp_source.html  Shotgun_8hpp_source.html  SideScrollingCamera_8hpp_source.html  SpriteComponent_8hpp_source.html  TimerComponent_8hpp_source.html  annotated.html  classBox2DDebugDraw-members.html  classBox2DDebugDraw.html  classBullet-members.html  classBullet.html  (+161 more)
project/platformer/graphics/: dirt.kra
project/platformer/levels/: dirtsheet.tps  dirttile.json  testlvl.json
(+131 files in other folders)
